--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     def glide = "4.11.0"
     def koin = "2.1.6"
     def retrofit = "2.6.1"
+    def room = "2.2.5"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
@@ -70,7 +71,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     // architecture components
-    implementation 'androidx.core:core-ktx:1.3.0'
+    implementation 'androidx.core:core-ktx:1.3.1'
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle"
@@ -89,6 +90,12 @@ dependencies {
     // glide
     implementation "com.github.bumptech.glide:glide:$glide"
     kapt "com.github.bumptech.glide:compiler:$glide"
+
+    // room components
+    implementation "androidx.room:room-runtime:$room"
+    implementation "androidx.room:room-ktx:$room"
+    kapt "androidx.room:room-compiler:$room"
+    testImplementation "androidx.room:room-testing:$room"
 
     // test
     testImplementation "androidx.test:core-ktx:1.2.0"
