--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,10 @@ android {
 
     buildTypes {
         debug {
-            buildConfigField "String", "BASE_URL", "\"$baseUrl/\""
+            buildConfigField "String", "BASE_URL", "\"$baseUrl\""
         }
         release {
-            buildConfigField "String", "BASE_URL", "\"$baseUrl/\""
+            buildConfigField "String", "BASE_URL", "\"$baseUrl\""
 
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -58,6 +58,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     // kotlin
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.72"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines"
@@ -76,6 +77,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle"
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
+
     // over 64k methods
     implementation 'androidx.multidex:multidex:2.0.1'
 
