--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <!-- file provider -->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.bezgrebelnygregory.testapp.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+        <!-- /file provider -->
+
         <activity android:name=".app.ui.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
