--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".app.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:name=".app.App"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -34,6 +34,7 @@
         </activity>
         <activity android:name=".app.ui.subbreed.SubBreedActivity" />
         <activity android:name=".app.ui.images.ImagesActivity" />
+        <activity android:name=".app.ui.favoriteimages.FavoriteImagesActivity" />
 
     </application>
 
